# ubuild

./: .eslintrc.json  .evolve-history.jsonl  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVOLVE.md  LICENSE  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  test-build.js  tsconfig.json
.evolve/: backlog.md  experience.md
.evolve/history/: iterations.jsonl
.evolve/memory/: insights.md
.evolve/state/: .gitignore  health.json
.github/workflows/: ci.yml  release.yml
examples/: api-usage.js
src/: cli.rs  error.rs  index.test.ts  index.ts  main.rs  platform.rs  types.rs
src/cli/: index.test.ts  index.ts
src/commands/: build.rs  build.test.ts  build.ts  clean.rs  clean.test.ts  clean.ts  engine.rs  engine.test.ts  engine.ts  evolve.test.ts  evolve.ts  gencodebase.rs  gencodebase.test.ts  gencodebase.ts  generate.rs  generate.test.ts  generate.ts  init.rs  init.test.ts  init.ts  list.rs  list.test.ts  list.ts  mod.rs  output-snapshots.test.ts  run.rs  run.test.ts  run.ts  switch.rs  switch.test.ts  switch.ts  update.rs  update.test.ts  update.ts  version.rs  version.test.ts  version.ts
src/core/: build-executor.test.ts  build-executor.ts  build_executor.rs  clean-executor.test.ts  clean-executor.ts  clean_executor.rs  compile-commands-generator.test.ts  compile-commands-generator.ts  compile_commands_generator.rs  engine-resolver.test.ts  engine-resolver.ts  engine_resolver.rs  error-paths.test.ts  evolution-reporter.test.ts  evolution-reporter.ts  mod.rs  project-builder.test.ts  project-builder.ts  project-detector.test.ts  project-detector.ts  project-generator.test.ts  project-generator.ts  project-initializer.test.ts  project-initializer.ts  project-path-resolver.test.ts  project-path-resolver.ts  project-runner.test.ts  project-runner.ts  project_builder.rs  project_detector.rs  project_generator.rs  project_initializer.rs  project_path_resolver.rs  project_runner.rs  self-driver.test.ts  self-driver.ts  switch-executor.test.ts  switch-executor.ts  switch_executor.rs  target-resolver.test.ts  (+2 more)
src/test-utils/: capture-stream.test.ts  capture-stream.ts  execa-child.test.ts  execa-child.ts  flush-promises.test.ts  flush-promises.ts  index.test.ts  index.ts  registry-fixtures.test.ts  registry-fixtures.ts  temp-dir.test.ts  temp-dir.ts  test-contexts.test.ts  test-contexts.ts  unreal-fixtures.test.ts  unreal-fixtures.ts
src/types/: build.test.ts  build.ts  clean.test.ts  clean.ts  engine.test.ts  engine.ts  evolve.test.ts  evolve.ts  generate.test.ts  generate.ts  index.test.ts  index.ts  init.test.ts  (+5 more)
tmp-coverage/: coverage-final.json
(+24 files in other folders)
