[package]
name = "ubuild"
version = "0.1.0"
edition = "2021"
description = "Unreal Engine project management CLI tool"
license = "MIT"
repository = "https://github.com/Ziiilk/ubuild"
readme = "README.md"

[[bin]]
name = "ubuild"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
console = "0.15"
dialoguer = "0.11"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
too_many_arguments = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
